# decrypt_gpg

./: Makefile  README.md  copy-usb.py  decrypt.pl  pyproject.toml
src/decrypt_gpg/: decrypt.py  sync.py
tests/: test_decrypt.py  test_sync.py
